syntax = "proto3";
package comment;
option go_package=".;proto";

import "proto/user.proto";

service CommentSrv{
  //评论操作
  rpc douyin_comment_action(douyin_comment_action_request) returns (douyin_comment_action_response);//视频投稿
  //评论列表
  rpc douyin_comment_list(douyin_comment_list_request) returns(douyin_comment_list_response);
}

message douyin_comment_action_request{
  int64 user_id=1;
  string token =2;
  int64 video_id= 3;
  int32 action_type =4;
  string comment_text =5;
  int64 comment_id =6;
}

message douyin_comment_action_response{
  int32 status_code=1;
  string status_msg=2;
  Comment comment =3;
}
message Comment{
  int64  id =1;
  user.User user=2;
  string content =3;
  string create_date =4;
}

message douyin_comment_list_request{
  string token =1;
  int64 video_id =2;
}

message douyin_comment_list_response{
  int32 status_code=1;
  string  status_msg=2;
  repeated Comment comment_list =3;
}

